--- a/FoodApp/src/main/webapp/assets/dashboard.css
+++ b/FoodApp/src/main/webapp/assets/dashboard.css
@@ -114,5 +114,115 @@ body {
 
 .product-tr-price{
     font-size: 16px;
-    color: rgb(0, 255, 42);
+    color: #ff514e;
+}
+
+/* Thêm sản phẩm */
+.add-product {
+    text-align: center;
+}
+
+.form-product {
+    border: 2px solid black;
+    width: 50%;
+    border-radius: 8px;
+}
+
+.form-product table {
+    border: none;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.form-product td {
+    border: none;
+}
+
+.form-product h2 {
+    text-align: center;
+    color: #ff514e;
+}
+
+.form-product input {
+    width: 90%;
+}
+
+.form-product .btn-form-add-product {
+    margin: 20px 0 20px 0;
+    background-color: rgb(70,140,200);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    height: 36px;
+    width: 100px;
+    cursor: pointer;
+}
+
+.form-product .btn-form-add-product:hover {
+    background-color: rgb(20, 100, 160);
+}
+
+
+/* sửa thông tin sản phẩm */
+.modal {
+    text-align: center;
+    margin-bottom: 20px;
+    display: block;
+    position: inherit;
+    animation: modalFadeIn ease 0.8s;
+}
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-200px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.modal .form-edit-product {
+    position: relative;
+    display: inline-block;
+    width: 1000px;
+    height: 500px;
+    background-color: #fff;
+    margin: 50px 0;
+    padding: 40px 20px;
+    border-radius: 6px;
+    border: solid 1px black;
+}
+
+.modal .form-edit-product h2{
+    font-size: 28px;
+    color: #ff514e;
+}
+
+.btn-form-edit-product {
+    margin: 20px 0 20px 0;
+    background-color: rgb(70,140,200);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    height: 40px;
+    width: 120px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.btn-form-edit-product:hover {
+    background-color: rgb(20, 100, 160);
+}
+.form-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: red;
+    padding: 12px;
+    cursor: pointer;
+    border: none;
+}
+.form-close:hover {
+    background-color: #ccc;
+    color: #000;
 }
